# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-10-22 Michael Truog   <mjtruog at protonmail dot com>

    * Small improvements to cloudi executable and vm.config

2019-09-21 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi executable handling of quotes and spaces when
      parsing the vm.args config file
    * Add a ${CLOUDI_NODE_ARGS}.args configuration file for
      Erlang/OTP VM arguments specific to the node
      (typically adding paths to the code server's search paths)
    * Move the app.config configuration file to vm.config

2019-09-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi executable comment about stop and restart delay

2019-09-14 Michael Truog   <mjtruog at protonmail dot com>

    * The cloudi executable will not create a
      ${HOME}/.erlang.cookie file now
    * Use the cloudi executable node name for the
      /tmp pipe directory used for the Erlang shell and
      the default pid file name

2019-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Ignore the DEP0097 runtime deprecation in the
      Javascript CloudI API due to required domain module use
      (prevents stderr output logged as ERROR that is not an error)
    * Add Cabal package version check for testing GHC 8.8.1
    * Update Haskell CloudI API dependencies to work with
      GHC >= 8.8.1 and Cabal >= 3.0.0

2019-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for GCC 8.3.0
    * Add support for clang 8.0.0

2019-08-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add "type" to the CloudI Service API JSON response for services
    * Add "type", "prefix", "file_path", "module" to the
      CloudI Service API response for services_status
    * Fix errors in cloudi_service_api_requests caused by invalid input
    * Update nodefinder

2019-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 23 compatibility