@@ -3,7 +3,7 @@
 //
 // MIT License
 //
-// Copyright (c) 2016-2018 Michael Truog <mjtruog at protonmail dot com>
+// Copyright (c) 2016-2019 Michael Truog <mjtruog at protonmail dot com>
 //
 // Permission is hereby granted, free of charge, to any person obtaining a
 // copy of this software and associated documentation files (the "Software"),
@@ -73,13 +73,13 @@ public class FunctionObject9 implements FunctionInterface9
                                       OtpErlangPid>(api, clazz, methodName);
     }
 
-    public Object invoke(Integer command, String name, String pattern,
+    public Object invoke(Integer request_type, String name, String pattern,
                          byte[] request_info, byte[] request,
                          Integer timeout, Byte priority,
                          byte[] trans_id, OtpErlangPid pid)
         throws Throwable
     {
-        return this.function.invoke(command, name, pattern,
+        return this.function.invoke(request_type, name, pattern,
                                     request_info, request,
                                     timeout, priority,
                                     trans_id, pid);
