@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2019-10-24 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add +pc unicode to vm.args for unicode CloudI logging
+    * Add cloudi_service_null debug_contents argument
+    * Fix Java CloudI API request_type variable names
+    * Expect Erlang/OTP >= 23 to not require a space_merge
+      parsing of -args_file lines (will instead use exact parsing)
+
 2019-10-22 Michael Truog   <mjtruog at protonmail dot com>
 
     * Small improvements to cloudi executable and vm.config
